err/flask-douwa.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Douwa-0.2.7.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_douwa'...
Listing './lib/python3.5/site-packages/flask_douwa/protoparser'...
Listing './lib/python3.5/site-packages/flask_douwa/rpc'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/protobuf'...
Listing './lib/python3.5/site-packages/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/google/protobuf/internal'...
Listing './lib/python3.5/site-packages/google/protobuf/internal/import_test_package'...
Listing './lib/python3.5/site-packages/google/protobuf/pyext'...
Listing './lib/python3.5/site-packages/google/protobuf/util'...
Listing './lib/python3.5/site-packages/grpc'...
Listing './lib/python3.5/site-packages/grpc/_cython'...
Listing './lib/python3.5/site-packages/grpc/_cython/_credentials'...
Listing './lib/python3.5/site-packages/grpc/_cython/_cygrpc'...
Listing './lib/python3.5/site-packages/grpc/beta'...
Listing './lib/python3.5/site-packages/grpc/framework'...
Listing './lib/python3.5/site-packages/grpc/framework/common'...
Listing './lib/python3.5/site-packages/grpc/framework/foundation'...
Listing './lib/python3.5/site-packages/grpc/framework/interfaces'...
Listing './lib/python3.5/site-packages/grpc/framework/interfaces/base'...
Listing './lib/python3.5/site-packages/grpc/framework/interfaces/face'...
Listing './lib/python3.5/site-packages/grpcio-1.7.0.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/kafka'...
Listing './lib/python3.5/site-packages/kafka/consumer'...
Listing './lib/python3.5/site-packages/kafka/coordinator'...
Listing './lib/python3.5/site-packages/kafka/coordinator/assignors'...
Listing './lib/python3.5/site-packages/kafka/metrics'...
Listing './lib/python3.5/site-packages/kafka/metrics/stats'...
Listing './lib/python3.5/site-packages/kafka/partitioner'...
Listing './lib/python3.5/site-packages/kafka/producer'...
Listing './lib/python3.5/site-packages/kafka/protocol'...
Listing './lib/python3.5/site-packages/kafka/serializer'...
Listing './lib/python3.5/site-packages/kafka/vendor'...
Listing './lib/python3.5/site-packages/kafka_python-1.3.5.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/msgpack'...
Listing './lib/python3.5/site-packages/msgpack_python-0.4.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/protobuf-3.4.0.dist-info'...
Listing './lib/python3.5/site-packages/sequence_field'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
